--- a/Priorities_Homework/Components/_Imports.razor
+++ b/Priorities_Homework/Components/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using Priorities_Homework
 @using Priorities_Homework.Components
+@using Priorities_Homework.BLL
+@using Priorities_Homework.Models
+
