--- a/Priorities_Homework/Components/Pages/Home.razor
+++ b/Priorities_Homework/Components/Pages/Home.razor
@@ -2,6 +2,6 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Tarea #1 programación aplicada I</h1>
 
-Welcome to your new app.
+Cristopher Marte (2021-0551)
