Modifiqué para que desaparecierá un mensaje

--- a/Priorities_Homework/Components/Pages/Registros/R_Prioridades.razor
+++ b/Priorities_Homework/Components/Pages/Registros/R_Prioridades.razor
@@ -67,6 +67,8 @@
 
 	public void Nuevo() {
 		prioridades = new Prioridades(); // Creamos un nuevo dato... con el html se verá dicho cambio
+		Mensaje = "";
+
 	}
 
 	public void Guardar() {
