--- a/Priorities_Homework/Components/Layout/NavMenu.razor
+++ b/Priorities_Homework/Components/Layout/NavMenu.razor
@@ -16,15 +16,21 @@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="prioridades">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Registros
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Registros Prioridades
             </NavLink>
         </div>
 
-        <!-- <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="RegistroClientes">
+                <span class="bi bi-person-fill-add align-items-center d-flex justify-content-center" style="font-size: 1.5em;" aria-hidden="true"></span> Registro Cliente
             </NavLink>
-        </div>-->
+        </div>
+        <!--<span class="bi bi-clipboard2-plus-fill align-items-center d-flex justify-content-center" style="font-size: 1.5em;" aria-hidden="true"></span>-->
+         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="ConsultaClientes">
+                <span class="bi bi-file-earmark-person align-items-center d-flex justify-content-center"style="font-size: 1.5em;" aria-hidden="true"></span> Consulta Cliente
+            </NavLink>
+        </div>
     </nav>
 </div>
 
