Quitando referencia en tabla de consultas

--- a/Priorities_Homework/Components/Pages/Consultas/C_Cliente.razor
+++ b/Priorities_Homework/Components/Pages/Consultas/C_Cliente.razor
@@ -23,7 +23,7 @@
         <tbody>
             @foreach (var item in ListaClientes) {
                 <tr>
-                    <td><a href="Cliente/@item.ClienteId">@item.ClienteId</a></td>
+                    <td>@item.ClienteId</td>
                     <td>@item.Nombre</td>
                     <td>@item.RNC</td>
                     <td>@item.Teléfono</td>
